--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -277,6 +277,9 @@ nav h2 {
     padding-bottom: 1.5rem;
 }
 
+.code-container {
+    background-color: #fffde5;
+}
 
 
 code {
@@ -284,7 +287,7 @@ code {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     font-size: 0.75rem;
-    background-color: #fffde5;
+/*    background-color: #fffde5;*/
     display: block;
 }
 
