--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -167,6 +167,7 @@ aside {
     top: 0;
     right: 0;
     text-align: right;
+    border-left: 1px solid #333;
 }
 
 nav a {
@@ -236,7 +237,7 @@ nav h2 {
 
 .content {
     float: left;
-    width: 80%;
+    width: 84%;
 }
 
 #value {
