--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -77,6 +77,28 @@ h3 {
     text-align: center;
 }
 
+.landing-box { /*border rectangle on landing page*/
+    border: 1px solid black;
+    width: 100%;
+    height: 54em;
+}
+
+.landing-box h1 {
+    text-align: center;
+    position: relative;
+    top:46%;
+    text-decoration: line-through;
+}
+
+.landing-box h2 {
+    text-align: center;
+    position: relative;
+    top:48%;
+    text-transform: uppercase;
+    text-decoration: line-through;
+}
+
+
 .wireframe-btn {
     min-height: 10vh;
     display: flex;
