--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,7 +1,11 @@
+/*----------FONT----------*/
+
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', 'Crimson Text', sans-serif;
     box-sizing: border-box;
 }
+
+/*----------BASIC STYLING----------*/
 
 html,
 body {
@@ -15,26 +19,375 @@ body {
     background-color: white;
 }
 
-h1 {
-    letter-spacing: 0.05em;
-    font-size: 1.75rem;
-    font-weight: 900;
+/*headers*/
 
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    color: #333;
+    letter-spacing: 0.025em;
+    font-size: 2rem;
+    font-weight: 400;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    text-align: center;
 }
 
 h2 {
+    font-family: 'Montserrat', sans-serif;
+    color: #333;
     letter-spacing: 0.05em;
-    font-size: 1em;
-    font-weight: 300;
-    line-height: 0.05rem;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 h3 {
+    color: #333;
     letter-spacing: 0.05em;
-    font-size: 0.8em;
-    font-weight: 100;
-    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 400;
+    text-decoration: underline;
 }
+
+h4 {
+    font-family: 'Crimson Text', serif;
+    letter-spacing: 0.3em;
+    font-size: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1em;
+    margin-bottom: 0;
+    width: 100%;
+    text-align: center;
+}
+
+p {
+    font-weight: 100;
+    font-size: 0.85em;
+    line-height: 1.5em;
+}
+
+/*main container*/
+
+.content-container {
+    padding: 2rem;
+    min-height: 100%;
+}
+
+.content {
+    float: left;
+    width: 100%;
+    padding-bottom: 3rem;
+    margin-top: 10rem;
+}
+
+.section-header {
+    padding-top: 12rem;
+    padding-bottom: 1.5rem;
+}
+
+.section-element {
+    padding-bottom: 1.5rem;
+    padding-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
+
+.code-container {
+    border: solid 1px black;
+    background-color: #ffffff;
+}
+
+code {
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-size: 0.75rem;
+    display: block;
+}
+
+/*----------NAVIGATION----------*/
+
+nav {
+    position: fixed;
+    background: white;
+    width: 100%;
+    z-index: 100;
+}
+
+#nav-style nav {
+    position: relative;
+    background: white;
+    width: 100%;
+}
+
+nav a {
+    color: #333333;
+    text-decoration: none;
+    transition: color 0.5s ease-in-out;
+    font-weight: 100;
+}
+
+nav a:focus {
+    color: #333333;
+}
+
+nav h2 {
+    padding-top: 1.5rem;
+}
+
+.logo-container {
+    padding-top: 2rem;
+    padding: 2em;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    border-bottom: 1px black;
+}
+
+.nav-container {
+    text-align: center;
+}
+
+/* Links inside the navbar */
+
+.nav-container a {
+    /*    float: right;*/
+    position: relative;
+    text-align: center;
+    color: #afafaf;
+    padding: 14px 31.2px;
+    text-transform: uppercase;
+    font-size: 0.7em;
+    letter-spacing: 0.2em;
+    text-decoration: none;
+    transition: all 0.3s ease-in;
+    border-bottom: 1px solid #FFF;
+}
+
+/* Underline on mouse-over */
+
+.nav-container a:hover {
+    color: black;
+    border-bottom: 1px solid #000;
+}
+
+.ham-bar1,
+.ham-bar2,
+.ham-bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.nav-container.responsive .ham-bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 50px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.nav-container.responsive .ham-bar2 {
+    opacity: 0;
+}
+
+.nav-container.responsive .ham-bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+
+.hamburger {
+    display: none;
+}
+
+/*List nav links in a row*/
+
+.nav-container ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 10px 0;
+}
+
+.nav-container ul li {
+    list-style-type: none;
+    padding: 0 6px;
+    display: inline-block;
+}
+
+/*---------- BUTTONS/LINKS ----------*/
+
+a.btn {
+    color: #333;
+    text-decoration: none;
+    background-color: #ffff66;
+    transition: 0.5s ease all;
+}
+
+a.btn:hover {
+    color: white;
+}
+
+a.btn:focus {
+    color: white;
+}
+
+.btn {
+    display: inline-block;
+    text-align: center;
+    padding: 1rem;
+    position: relative;
+}
+
+.btn:hover {
+    background-color: #333333;
+    transition: 0.5s ease all;
+}
+
+#button-element a {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+a.btn2 {
+    color: #333;
+    text-decoration: none;
+    border: 1px solid #333;
+    background-color: white;
+    transition: 0.5s ease all;
+}
+
+a.btn2:hover {
+    color: white;
+}
+
+a.btn2:focus {
+    color: white;
+}
+
+.btn2 {
+    display: inline-block;
+    text-align: center;
+    padding: 1rem 1.5rem;
+    position: relative;
+}
+
+.btn2:hover {
+    background-color: #333333;
+    transition: 0.5s ease all;
+}
+
+/*in-text links*/
+
+.in-text-link {
+    text-decoration: none;
+    color: #666666;
+    font-weight: 800;
+    font-size: 1em;
+}
+
+.in-text-link:hover {
+    color: #AAAAAA;
+    transition: color 0.5s ease-in-out;
+    text-decoration: line-through;
+}
+
+/*---------- VALUE ----------*/
+
+/*landing image*/
+
+.landing-image {
+    margin-left: auto;
+    margin-right: auto;
+    top: 0;
+    width: 65%;
+    padding-bottom: 5em;
+    border-bottom: 1px solid black
+}
+
+.landing-image img {
+    position: relative;
+    width: 100%;
+    opacity: 0.5;
+}
+
+.landing-image h4 {
+    position: absolute;
+    color: black;
+    top: 25.3%;
+    left: 0;
+    width: 100%;
+    padding: 1em;
+}
+
+.landing-image p {
+    position: absolute;
+    width: 100%;
+    color: black;
+    top: 40%;
+    left: 0;
+    text-align: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.more-btn {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 51.3%;
+    text-align: center;
+    padding: 3rem;
+}
+
+.more-btn a,
+.view-btn a {
+    text-decoration: none;
+    color: #333;
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid black;
+    padding: 1rem 3rem;
+    font-size: 0.75em;
+    letter-spacing: 0.05em;
+    text-align: center;
+}
+
+.more-btn a:hover,
+.view-btn a:hover {
+    background-color: #333;
+    color: #FFF;
+    transition: all 0.5s ease-in-out;
+}
+
+/*media query for landing image*/
+
+@media (max-width: 70em) {
+    .landing-image {
+        width: 100%;
+        margin: auto;
+    }
+}
+
+@media (max-width: 50em) {
+    .landing-image img {
+        width: 100%;
+        margin: auto;
+        opacity: 1;
+    }
+    .landing-image h4 {
+        position: relative;
+    }
+    .landing-image p {
+        position: relative;
+    }
+    .more-btn {
+        position: relative;
+    }
+}
+
+/*---------- INTERACTIVE ELEMENTS ----------*/
 
 #landing-title {
     display: inline-block;
@@ -121,126 +474,6 @@ h3 {
     justify-content: center;
 }
 
-a.btn {
-    color: #333;
-    text-decoration: none;
-    background-color: #ffff66;
-    transition: 0.5s ease all;
-}
-
-a.btn:hover {
-    color: white;
-}
-
-a.btn:focus {
-    color: white;
-}
-
-.btn {
-    display: inline-block;
-    text-align: center;
-    padding: 1rem;
-    position: relative;
-}
-
-.btn:hover {
-    background-color: #333333;
-    transition: 0.5s ease all;
-}
-
-#button-element a {
-    padding-left: 2rem;
-    padding-right: 2rem;
-}
-
-a.btn2 {
-    color: #333;
-    text-decoration: none;
-    border: 1px solid #333;
-    background-color: white;
-    transition: 0.5s ease all;
-}
-
-a.btn2:hover {
-    color: white;
-}
-
-a.btn2:focus {
-    color: white;
-}
-
-.btn2 {
-    display: inline-block;
-    text-align: center;
-    padding: 1rem 1.5rem;
-    position: relative;
-}
-
-.btn2:hover {
-    background-color: #333333;
-    transition: 0.5s ease all;
-}
-
-aside {
-    height: 100vh;
-    padding: 2rem;
-    width: 16rem;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    text-align: right;
-    border-left: 1px solid #333;
-}
-
-nav a {
-    color: #333333;
-    text-decoration: none;
-    display: block;
-    transition: color 0.5s ease-in-out;
-    font-weight: 100;
-}
-
-.nav-container a:hover {
-    color: #AAAAAA;
-    -webkit-animation: slowskew 0.5s infinite alternate;
-    -moz-animation: slowskew 0.5s infinite alternate;
-    -o-animation: slowskew 0.5s infinite alternate;
-    animation: slowskew 0.5s infinite alternate;
-}
-
-@-webkit-keyframes slowskew {
-    to {
-        -webkit-transform: skewX(-10deg);
-    }
-}
-
-@-moz-keyframes slowskew {
-    to {
-        -moz-transform: skewX(-10deg);
-    }
-}
-
-@-o-keyframes slowskew {
-    to {
-        -o-transform: skewX(-10deg);
-    }
-}
-
-@keyframes slowskew {
-    to {
-        transform: skewX(-10deg);
-    }
-}
-
-nav a:focus {
-    color: #333333;
-}
-
-nav h2 {
-    padding-top: 1.5rem;
-}
-
 .foundation,
 .ui,
 .other {
@@ -253,24 +486,11 @@ nav h2 {
     text-transform: lowercase;
 }
 
-.content-container {
-    padding: 2rem;
-    margin: 0;
-}
 
-.content {
-    float: left;
-    width: 84%;
-}
+
 
 #value {
     padding-top: 2.5rem;
-}
-
-#value h2 {
-    font-weight: 900;
-    text-transform: uppercase;
-    padding-bottom: 2rem;
 }
 
 #value p {
@@ -280,63 +500,20 @@ nav h2 {
     padding-bottom: 1rem;
 }
 
-#interactive-elements h2 {
-    font-weight: 900;
-    text-transform: uppercase;
-    padding-top: 2rem;
-}
-
 #interactive-elements h3 {
     padding-top: 1rem;
 }
 
-.section-header {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    border-top: 1px solid #333;
-}
-
-.section-element {
-    border-top: 1px solid #333;
-    padding-bottom: 1.5rem;
-}
-
-.code-container {
-    border: solid 1px black;
-    background-color: #ffffff;
-}
-
-
-code {
-    padding-left: 1rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    font-size: 0.75rem;
-    /*    background-color: #fffde5;*/
-    display: block;
-}
-
-
-.in-text-link {
-    text-decoration: none;
-    color: #666666;
-    font-weight: 800;
-    font-size: 1em;
-}
-
-.in-text-link:hover {
-    color: #AAAAAA;
-    transition: color 0.5s ease-in-out;
-    text-decoration: line-through;
-}
 
 .nav-btn a {
     color: #333333;
     text-decoration: none;
     display: block;
+    letter-spacing: 0.1em;
+    font-size: 0.8em;
     transition: color 0.5s ease-in-out;
     font-weight: 100;
-    text-transform: lowercase;
+    text-transform: uppercase;
 }
 
 .nav-btn a:hover {
@@ -357,12 +534,6 @@ input {
     width: 50%;
 }
 
-#text-styling h2 {
-    font-weight: 900;
-    text-transform: uppercase;
-    padding-top: 2rem;
-}
-
 #text-styling h3 {
     padding-top: 1rem;
 }
@@ -373,18 +544,14 @@ input {
     font-size: 1rem;
 }
 
-#combined-elements h2 {
-    font-weight: 900;
-    text-transform: uppercase;
-    padding-top: 2rem;
-}
+/*COMBINED ELEMENTS*/
 
 #combined-elements h3 {
     padding-top: 1rem;
 }
 
 #nav-style {
-    width: 16rem;
+    width: 100%;
     text-align: right;
 }
 
@@ -398,83 +565,76 @@ input {
     display: inline-block;
 }
 
-#product-element a {
-    text-decoration: none;
-    color: #333;
-}
-
-.product-box {
-    position: relative;
-    display: block;
-    width: 500px;
-    height: 500px;
-}
-
-.product-box:hover {
-    background: #333333;
-    transition: 0.5s ease all;
-    cursor: pointer;
-}
-
-#product-element a:hover {
-    color: #FFFDE5;
-    transition: 0.5s ease all;
-}
-
-#product-element a {
-    color: transparent;
-}
-
-.product-text p {
-    position: absolute;
-    top: 8px;
-    right: 16px;
-    text-align: right;
-    padding-right: 2rem;
-}
-
-.product-text p:hover {
-    position: absolute;
-    top: 8px;
-    right: 16px;
-    text-align: right;
-    padding-right: 2rem;
-}
-
-.product-name p {
-    font-size: 1.5rem;
-    font-weight: 700;
-    padding-top: 2rem;
-}
-
-.product-price p {
-    font-size: 0.75rem;
-    font-weight: 200;
-    position: absolute;
-    right: 1rem;
-    top: 24rem;
-}
-
-.product-image img {
-    width: 500px;
-}
-
-.product-image:hover {
-    transition: 0.5s ease all;
-    filter: brightness(50%);
-}
-
+/*product listing*/
 .grid-container {
     display: flex;
-    ;
-    padding-bottom: 1rem;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
 }
 
-.grid-container p {
-    font-size: 2rem;
-    font-weight: 900;
+li.grid-col-4of12 {
+    width: 33.3333333%;
+    border: none; 
+    height: 100%;
+    
+}
+
+ul.product-list {
+    list-style-type: none;
+    margin: auto;
+    padding: 0;
+    width: 100%;
     text-align: center;
-    padding-top: 3rem;
+    
+}
+
+ul.product-list li {
+    display: inline-block;
+    position: relative;
+
+}
+
+ul.product-list li img {
+    width: 100%;
+    display: block;
+}
+
+/* Text in the product image */
+.text-content h2, .text-content p {
+    text-align: center;
+    vertical-align: middle;
+    color: #FFFDE5;
+    text-decoration: none;
+    padding-top: 30%;
+}
+
+.text-content {
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    cursor: pointer;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0;
+    -webkit-transition: opacity 300ms;
+    -moz-transition: opacity 300ms;
+    -o-transition: opacity 300ms;
+    transition: opacity 300ms;
+}
+
+ul.product-list li:hover .text-content {
+    opacity: 1;
+}
+
+#structure p {
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+    padding-top: 5rem;
 }
 
 .grid-col-12of12 {
@@ -505,32 +665,33 @@ input {
     border: 1px solid black;
 }
 
+/*colour palette*/
 .box p {
     text-align: center;
 }
 
+.box {
+    width: 20%;
+}
+
 
 #white-box {
-    width: 200px;
     height: 200px;
     background: #FFFFFF;
     border: solid 1px #000;
 }
 
 #lightyellow-box {
-    width: 200px;
     height: 200px;
     background: #FFFDE5;
 }
 
 #yellow-box {
-    width: 200px;
     height: 200px;
     background: #FFFF66;
 }
 
 #grey-box {
-    width: 200px;
     height: 200px;
     background: #AAAAAA;
 }
@@ -540,7 +701,6 @@ input {
 }
 
 #black-box {
-    width: 200px;
     height: 200px;
     background: #333333;
 }
@@ -564,10 +724,4 @@ input {
     color: #AAAAAA;
     transition: color 0.5s ease-in-out;
     text-decoration: line-through;
-}
-
-@media (max-width: 44rem) {
-    .product-box {
-        width: 100%;
-    }
 }
